    multithreading errors in user code.
  + The user code can also send events to USRWORK, so that everything gets
    serialized nicely without having to use so many mutexes.
  Drawbacks:
  - Currently the work state structure is malloc()ed, causing one allocation
    and free per each input event. Could add a memory pool for these later, but
    the speed difference doesn't seem noticeable.
  - The work queue will add ~50 ms latency to input events. This is however
    configurable, and the delay is anyway short enough that it is unnoticeable.
  From Petteri Aimonen.

1.7 2013-04-28 Gregory Nutt <gnutt@nuttx.org>

* NxWidgets bitmap_converter.py: Fix bug when image width > 255.  From
  Petteri Aimonen (2013-4-22).
* NxWM::CScrollbarPanel:  Fix spelling error in class name: CScollbarPanel
  should be CScrollbarPanel.  From Petteri Aimonen (2013-4-22).
* NxWidgets:: CGlyphButton: Generate action event, like CButton does.
  From Petteri Aimonen (2013-4-22).
* NxWidgets:: CGlyphButton:  Prevent drawing outside of the bitmap size.
  From Petteri Aimonen (2013-4-22).
* NxWM::CTaskBar:  Add option CONFIG_NXWM_TASKBAR_NO_BORDER to suppress
  drawing of the border on the taskbar.  From Petteri Aimonen (2013-4-22).
* NxWidgets::CNxTimer:  Add function to check if CNxTimer is running.
  From Petteri Aimonen (2013-4-22).
* NxWidgets::CNxWidgets:  Allow overriding of the checkCollision() method.
  From Petteri Aimonen (2013-4-22).

1.8 2013-xx-xx Gregory Nutt <gnutt@nuttx.org>

*  NxWM::CMediaPlayer: shell application for an MP3 Media Player with
   Kconfig settings to enable it.  I plan to write this app to help
   develop and test the MP3 codec chip driver.  It really doesn't do
   anything yet except display a text box saying "Coming soon", and I
   need to minimize the icon size a bit.  From Ken Pettit (2013-5-11).
*  NxWidgets/nxwm/src/glyph_mediaplayer.cxx:  Smaller version of the
   media player glyph.  From Ken Pettit (2013-5-12).